CNAME; image; title

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Fabian Król by fabiankrol</title>
+    <title>Fabian Król</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
@@ -16,10 +16,11 @@
     <div class="wrapper">
       <header>
         <h1>Fabian Król</h1>
+        <img src="./images/fabian.jpg" />
         <p>Erlang Developer</p>
 
 
-        <p class="view"><a href="https://github.com/fabiankrol">View My GitHub Profile</a></p>
+        <p class="view"><a href="https://github.com/fabiankrol">GitHub Profile</a></p>
 
       </header>
       <section>
