--- a/index.html
+++ b/index.html
@@ -20,7 +20,10 @@
         <p>Erlang Developer</p>
 
 
-        <p class="view"><a href="https://github.com/fabiankrol">GitHub Profile</a></p>
+        <p class="view">
+            <a href="https://github.com/fabiankrol">GitHub Profile</a><br />
+            <a href="https://twitter.com/fabiankrol">@fabiankrol</a>
+        </p>
 
       </header>
       <section>
