--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="wrapper">
       <header>
         <h1>Fabian Król</h1>
-        <img src="./images/fabian.jpg" />
+        <img src="http://www.gravatar.com/avatar/3d3f112e31e166e2ad333246c5e08102.png?s=200" />
         <p>Erlang Developer</p>
 
 
