--- a/index.html
+++ b/index.html
@@ -1,51 +1,7 @@
-<!doctype html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Fabian Król</title>
-
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-    <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-  </head>
-  <body>
-    <div class="wrapper">
-      <header>
-        <h1>Fabian Król</h1>
-        <img src="http://www.gravatar.com/avatar/3d3f112e31e166e2ad333246c5e08102.png?s=200" />
-        <p>Erlang Developer</p>
-
-
-        <p class="view">
-            <a href="https://github.com/fabiankrol">GitHub Profile</a><br />
-            <a href="https://twitter.com/fabiankrol">@fabiankrol</a>
-        </p>
-
-      </header>
-      <section>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam viverra eros arcu. Aliquam porta sapien in dolor egestas vitae luctus lorem aliquet. Morbi aliquam sem et lorem dignissim sit amet rhoncus purus venenatis. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Ut sapien felis, posuere vitae cursus eget, aliquet nec arcu. Vestibulum non quam risus, eget iaculis sem. Phasellus scelerisque viverra massa sodales adipiscing.</p>
-
-<p>Vivamus sed venenatis mauris. Nullam eget nisi sem. Cras consectetur egestas aliquam. Aliquam erat volutpat. Nullam nulla justo, sodales ut pretium ut, mattis a sapien. Donec convallis enim ac mauris pulvinar vel pretium velit volutpat. Curabitur ullamcorper mattis velit sed cursus. Maecenas euismod mi sed massa bibendum tempor. Duis congue congue libero, vitae tempus metus dictum eget. Pellentesque ultrices interdum posuere. Pellentesque vitae dapibus dolor.</p>
-      </section>
-      <footer>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
-      </footer>
-    </div>
-    <script src="javascripts/scale.fix.js"></script>
-              <script type="text/javascript">
-            var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
-            document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-          </script>
-          <script type="text/javascript">
-            try {
-              var pageTracker = _gat._getTracker("UA-16043497-1");
-            pageTracker._trackPageview();
-            } catch(err) {}
-          </script>
-
-  </body>
-</html>
+---
+layout: basic
+title: Fabian Król
+---
+{% for post in site.posts %}
+    {{ post.date | date_to_string }} &raquo; <a href="{{ post.url }}">{{ post.title }}</a><br />
+{% endfor %}
